# Gather

./: .gitignore  DEVELOPER.md  LICENSE  README.md  TEST.md  install.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
desktop/: .prettierignore  .prettierrc  electron-builder.yml  eslint.config.js  jest.config.js  package.json  tsconfig.main.json  tsconfig.renderer.json  tsconfig.test.json  vite.config.ts  vitest.config.ts  webpack.renderer.config.js
desktop/coplugin/: Makefile
desktop/coplugin/GatherLink/: GatherLink.swift  Info.plist
desktop/engine/: engine.py  protocol.py
desktop/resources/: entitlements.mac.plist
desktop/src/main/: bootstrap.ts  capture-one.ts  index.ts  python-bridge.test.ts  python-bridge.ts
desktop/src/main/db/: database.ts  migrations.ts  schema.ts
desktop/src/main/di/: container.ts
desktop/src/main/ipc/: culling.ipc.ts  duplicate.ipc.ts  export.ipc.ts  face-kw.ipc.ts  filter.ipc.ts  helpers.ts  history.ipc.ts  image.ipc.ts  metadata.ipc.ts  registry.ts  (+8 more)
desktop/src/preload/: index.ts
desktop/src/renderer/: App.tsx  api.test.ts  api.ts  app.ts  env.d.ts  index.html  main.tsx  router.ts
docs/: CONTRIBUTING.md  DEVELOPER.md  README_CN.md  TEST.md  architecture-redesign.md  functional-design-plan.md  gather-design-execution-plan.md
face_keywording/: __init__.py  face_engine.py  service.py  writeback.py
scripts/: bundle-python.sh
shared/: __init__.py  base_service.py  cache.py  constants.py  db.py  exceptions.py  models.py  path_utils.py  session_manager.py  session_service.py  thumbnail.py  xmp_writer.py
similarity/: __init__.py  analysis.py  service.py
tests/: conftest.py  test_base_service.py  test_cache.py  test_db.py  test_engine_path.py  test_face_engine.py  test_protocol.py  test_services.py  test_session_manager.py  test_similarity_analysis.py  test_writeback.py
tests/e2e/: dashboard.spec.ts  face-keywording.spec.ts  navigation.spec.ts  playwright.config.ts  similarity.spec.ts
tests/services/di/: container.test.ts
tests/services/face-kw/: face-clusterer.test.ts  face-matcher.test.ts
tests/services/similarity/: cluster-engine.test.ts  hash-computer.test.ts
tests/shared/: protocol.test.ts
(+159 files in other folders)
